--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-    <img src="CapitalWhooshLogoPNG.PNG" alt="logo" style="width:200px;height:150px;">
+    <img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:200px;height:150px;">
     <h1><i style="font-size:40px">What's in your comet?</i></h1>
   </body>
 </html>
