--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-    <img src="CapitalWhooshLogoPNG.png" alt="logo" style="width:200px;height:150px;">
-    <h1><i style="font-size:40px">What's in your comet?</i></h1>
+		<h1 class="title-bar">
+			<img src="CapitalWhooshLogoPNG.png" alt="logo" style="width:87px;height:26px;">
+			<p><i style="font-size:40px">What's in your comet?</i></p>
+		</h1>
   </body>
 </html>
