--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 		<h1 class="title-bar">
-			<img src="CapitalWhooshLogoPNG.png" alt="logo" style="width:87px;height:26px;">
+			<img src="CapitalWhooshLogoPNG.png" alt="logo">
 			<p><i style="font-size:40px">What's in your comet?</i></p>
 		</h1>
   </body>
