--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
 		<h1 class="title-bar">
-			<img src="CapitalWhooshLogoPNG.png" alt="logo" style="width:200px;height:65px;">
-			<p><i style="font-size:40px">What's in your comet?</i></p>
+			<img src="CapitalWhooshLogoJPEG.jpg" alt="logo" style="width:200px;height:65px;">
+			<p><i>What's in your comet?</i></p>
 		</h1>
   </body>
 </html>
