--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-		<h1 class="title-bar">
+		<title-bar>
 			<img src="CapitalWhooshLogoJPEG.jpg" alt="logo" style="width:200px;height:65px;">
 			<p><i>What's in your comet?</i></p>
-		</h1>
+		</title-bar>
   </body>
 </html>
