--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-		<title-bar>
-			<img src="CapitalWhooshLogoJPEG.jpg" alt="logo" style="width:200px;height:65px;">
+		<div class="title-bar">
+			<img src="CapitalWhooshLogoPNG.png" alt="logo" style="width:87px;height:26px;">
 			<p><i>What's in your comet?</i></p>
-		</title-bar>
+		</div>
   </body>
 </html>
