--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
 		<div class="title-bar">
-			<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:87px;height:26px;" />
-			<p><i>What's in your comet?</i></p>
+			<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:305px;height:90px;"/>
+			<p><i style="font-size:35px">What's in your comet?</i></p>
 		</div>
   </body>
 </html>
