--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-		<div class="title-bar">
+		<div>
 			<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:305px;height:90px;"/>
 			<p><i style="font-size:35px">What's in your comet?</i></p>
 		</div>
