--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-		<div>
-			<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:305px;height:90px;"/>
-			<p><i style="font-size:35px">What's in your comet?</i></p>
-		</div>
+		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
+		<p><i style="font-size:35px">What's in your comet?</i></p>
+		
   </body>
 </html>
