--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
 		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
 		<p><i style="font-size:35px">What's in your comet?</i></p>
-		
+		<div>
+			<p style="color:white">Welcome to Capital Whoosh, your all in one college finance solution!</p>
+		</div
   </body>
 </html>
