--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
-		<p><i style="font-size:35px">What's in your comet?</i></p>
+		<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
 		<div>
 			<p style="color:white">Welcome to <i>Capital Whoosh</i>, your all in one college finance solution!</p>
 		</div
