--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             			<p>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
                 		  transactions, and update profile credentials </p>
             			<p>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</p>
+				<img src="temoc.jpg" alt="temoc" style="width:400px;height:500px" />
         		</div>
 		</div
   </body>
