--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
 		<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
 		<div>
-			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all in one college finance manager!</p>
-			<div class="blue-rectangle">
-				<p>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
-                		  can organize their campus finances and create budgets meeting
-            			</p>
-            			<p>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
-                		  transactions, and update profile credentials </p>
-            			<p>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</p>
-        		</div>
-		</div
+			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
+			<div class="items-in-a-row">
+				<div class="blue-rectangle">
+					BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
+					can organize their campus finances and create budget meetings
+				</div>
+				<div class="blue-rectangle">
+					SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
+					transactions, and update profile credentials
+				</div>
+				<div class="blue-rectangle">
+					EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices
+				</div>
+			</div>
+		</div>
   </body>
 </html>
