--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
 			<div class="items-in-a-row">
 				<div class="blue-rectangle">
-					BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
-					can organize their campus finances and create budget meetings
+					<center>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
+						can organize their campus finances and create budget meetings</center>
 				</div>
 				<div class="blue-rectangle">
-					SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
-					transactions, and update profile credentials
+					<center>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
+						transactions, and update profile credentials</center>
 				</div>
 				<div class="blue-rectangle">
-					EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices
+					<center>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</center>
 				</div>
 			</div>
 		</div>
