--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
 		<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
 		<div>
-			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
+			<p style="font-size:25px;color:white;margin-top:65px;margin-bottom:0px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
 			<div class="items-in-a-row">
 				<div class="blue-rectangle">
 					<center>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
