--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
-	<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
-	<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
-	<div>
-		<p style="font-size:25px;color:white;margin-top:65px;margin-bottom:0px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
-		<div class="items-in-a-row">
-			<div class="blue-rectangle">
-				<center>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
-					can organize their campus finances and create budget meetings</center>
-			</div>
-			<div class="blue-rectangle">
-				<center>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
-					transactions, and update profile credentials</center>
-			</div>
-			<div class="blue-rectangle">
-				<center>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</center>
+		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
+		<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
+		<div>
+			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
+			<div class="items-in-a-row">
+				<div class="blue-rectangle">
+					<center>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
+						can organize their campus finances and create budget meetings</center>
+				</div>
+				<div class="blue-rectangle">
+					<center>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
+						transactions, and update profile credentials</center>
+				</div>
+				<div class="blue-rectangle">
+					<center>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</center>
+				</div>
 			</div>
 		</div>
-	</div>
-	<p style="margin-top:50px;margin-bottom:100px;">Put a quote here or something to take up space for solid color in between the two images<p>
+		<p style="margin-top:50px;margin-bottom:100px;">Put a quote here or something to take up space for solid color in between the two images<p>
+		<div style="background-image:url('UTDbackground2JPEG.JPG')">
+			Hello World
+		</div>
   </body>
 </html>
