--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
 				</div>
 			</div>
 		</div>
-		<p style="margin-top:50px;margin-bottom:100px;">Put a quote here or something to take up space for solid color in between the two images<p>
+		<p style="margin-top:150px;margin-bottom:150px;">Put a quote here or something to take up space for solid color in between the two images<p>
 		<div style="background-image:url('UTDbackground2JPEG.JPG')">
-			Hello World
+			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
+			<div class="items-in-a-row-green">
+				<div class="orange-rectangle">
+					<center>Exchange Comet Cash with friends</center>
+				</div>
+				<div class="orange-rectangle">
+					<center>Manage Student Finances</center>
+				</div>
+			</div>
 		</div>
   </body>
 </html>
