--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<p style="margin-top:150px;margin-bottom:150px;">Put a quote here or something to take up space for solid color in between the two images<p>
-		<div style="height:700px;background-image:url('UTDbackground2JPEG.JPG')">
+		<div style="height:700px;background-image:url('UTDbackground2JPEG.JPG');background-attachment:none">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
 			<div class="items-in-a-row-green">
 				<div class="orange-rectangle">
