--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			</div>
 		</div>
 		<p style="margin-top:150px;margin-bottom:150px;">Put a quote here or something to take up space for solid color in between the two images<p>
-		<div style="height:700px;background-image:url('UTDbackground2JPEG.JPG');background-attachment:none">
+		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
 			<div class="items-in-a-row-green">
 				<div class="orange-rectangle">
-					<center>Exchange Comet Cash with friends</center>
+					<center>Exchange Comet Cash with Friends</center>
 				</div>
 				<div class="orange-rectangle">
 					<center>Manage Student Finances</center>
