--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
 			<div class="items-in-a-row-green">
 				<div class="orange-rectangle">
-					<center>Exchange Comet Cash with Friends</center>
+					<center>Exchange Comet Cash With Friends</center>
 				</div>
 				<div class="orange-rectangle">
 					<center>Manage Student Finances</center>
