--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</div>
-		<p style="margin-top:150px;margin-bottom:150px;">Put a quote here or something to take up space for solid color in between the two images<p>
+		<p style="margin-top:150px;margin-bottom:150px;">Inspirational Quote<p>
 		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
 			<div class="items-in-a-row-green">
