--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 				</div>
 			</div>
 		</div>
-		<p style="margin-top:150px;margin-bottom:150px;">Inspirational Quote<p>
+		<div class="items-in-a-row">
+			<img src="Gandhi-Quotes-Featured-Image-1600x900.png" alt="gandhi" style="width:200px;height:112px" />
+			<p>{"I love Capital Whoosh." -Gandhi}<p>
+		</div>
 		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
 			<div class="items-in-a-row-green">
