--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="items-in-a-row">
-			<img src="Gandhi-Quotes-Featured-Image-1600x900.png" alt="gandhi" style="width:200px;height:112px" />
+		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px">
+			<img src="gandhi1.jpg" alt="gandhi" style="width:300px;height:275px" />
 			<p>{"I love Capital Whoosh." -Gandhi}<p>
 		</div>
 		<div class="second-background">
