--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px">
 			<img src="gandhi1.jpg" alt="gandhi" style="width:300px;height:275px" />
-			<p>{"I love Capital Whoosh." -Gandhi}<p>
+			<p style="margin-left:75px">{"I love Capital Whoosh." -Gandhi}<p>
 		</div>
 		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
