--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px">
+		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px;background-image:none;background-color:#ffffff;">
 			<img src="gandhi1.jpg" alt="gandhi" style="width:300px;height:275px" />
-			<p style="margin-left:75px;background-image:none;background-color:#ffffff;font-size:35px">{"I love Capital Whoosh." -Gandhi}<p>
+			<p style="margin-left:75px;font-size:35px">{"I love Capital Whoosh." -Gandhi}<p>
 		</div>
 		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
