--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="bottom-credits">(c) 2021 - Akatsuki Programming Squad</div>
+	  <div class="bottom-credits"><p style="height:20px">(c) 2021 - Akatsuki Programming Squad</p></div>
   </body>
 </html>
