--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 				</div>
 			</div>
 		</div>
-	  <div class="bottom-credits">(c)  HackUTD 2021 - Akatsuki Programming Squad</div>
+	  <div class="bottom-credits" style="height:35px;">(c)  HackUTD 2021 - Akatsuki Programming Squad</div>
   </body>
 </html>
