--- a/index.html
+++ b/index.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html>
+	<link href="navbar.css" rel="navbarStyle"\>
+	<div class="navbarStyle">hi</div>
+
+	<div>
+		<a href="dashboard.html">do not press</a>
+	</div>
+	<ul>
+		<li><a href="#home">Home</a></li>
+		<li><a href="#news">News</a></li>
+		<li><a href="#contact">Contact</a></li>
+		<li style="float:right"><a class="active" href="#about">About</a></li>
+	</ul>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="topnav" id="myTopnav">
+  <a href="#Dashboard" class="active">Dashboard</a>
+  <a href="#crypto">Crypto</a>
+  <a href="#forex">Forex</a>
+  <a href="#travel">Travel</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<html lang = "en">
+    <head>
+        <meta charset ="utf-8">
+        <title>Navbar</title>
+        <link rel="stylesheet" href = "testnavbar.css">
+        <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Open+Sans" rel="stylesheet">
+    </head>
+    <header>
+        <h1>CODE<span>INSTINCT</span></h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">idk</a></li>
+                <li><a href="#">yes</a></li>
+                <li><a href="#">23</a></li>
+            </ul>
+        </nav>
+    </header>
+    <body>
+        <img src="images/BasicNavbar.jpeg">
+    </body>
+</html>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="navbar">
+  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
+  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+</div>
+
+
+<body>
+	<marquee direction="right" height="20" width="100%" bgcolor="#00FF23">USD/JPY</marquee>
+	</body>
+
+
+  
   <head>
     <title>Capital Whoosh</title>
     <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
   </head>
   <body>
 		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
-		<p><i style="font-size:35px;font-family: arial,helvetica;">What's in your comet?</i></p>
+		<p><i style="font-size:35px;font-family: arial,helvetica;">FOREX</i></p>
 		<div>
 			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
 			<div class="items-in-a-row">
 				<div class="blue-rectangle">
-					<center>BUDGETING: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
+					<center>hello my name is weenie hut juniors: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
 						can organize their campus finances and create budget meetings</center>
 				</div>
 				<div class="blue-rectangle">
@@ -25,7 +90,7 @@
 		</div>
 		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px;background-image:none;background-color:#ffffff;">
 			<img src="gandhi1.jpg" alt="gandhi" style="width:300px;height:275px" />
-			<p style="margin-left:75px;font-size:35px">"I love Capital Whoosh." -Gandhi<p>
+			<p style="margin-left:75px;font-size:35px"><p>
 		</div>
 		<div class="second-background">
 			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
