--- a/index.html
+++ b/index.html
@@ -1,108 +1,67 @@
 <!DOCTYPE html>
 <html>
-	<link href="navbar.css" rel="navbarStyle"\>
-	<div class="navbarStyle">hi</div>
-
-	<div>
-		<a href="dashboard.html">do not press</a>
-	</div>
-	<ul>
-		<li><a href="#home">Home</a></li>
-		<li><a href="#news">News</a></li>
-		<li><a href="#contact">Contact</a></li>
-		<li style="float:right"><a class="active" href="#about">About</a></li>
-	</ul>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<div class="topnav" id="myTopnav">
-  <a href="#Dashboard" class="active">Dashboard</a>
-  <a href="#crypto">Crypto</a>
-  <a href="#forex">Forex</a>
-  <a href="#travel">Travel</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-
-<html lang = "en">
-    <head>
-        <meta charset ="utf-8">
-        <title>Navbar</title>
-        <link rel="stylesheet" href = "testnavbar.css">
-        <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Open+Sans" rel="stylesheet">
+	<head>
+		<link rel="stylesheet" href="style.css">
+        <title>Comex.com</title>
     </head>
-    <header>
-        <h1>CODE<span>INSTINCT</span></h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">idk</a></li>
-                <li><a href="#">yes</a></li>
-                <li><a href="#">23</a></li>
-            </ul>
-        </nav>
-    </header>
-    <body>
-        <img src="images/BasicNavbar.jpeg">
-    </body>
-</html>
+	
+	<!-- Nav Bar -->
+	<header>
+		<a class="page-links" href="index.html">Dashboard</a>
+		<a class="page-links" href="forex.html">Forex</a>
+		<a class="page-links" href="crypto.html">Crypto</a>
+		<a class="page-links" href="index.html"><img class="logo-navbar" src="COMEX_rectangle.png"/></a>
+		<a class="page-links" href="watchlist.html">Watchlist</a>
+		<a class="page-links" href="travel.html">Travel</a>
+		<a class="page-links" href="profile.html">Profile</a>
+	</header>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<div class="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-</div>
-
-
-<body>
-	<marquee direction="right" height="20" width="100%" bgcolor="#00FF23">USD/JPY</marquee>
-	</body>
-
-
-  
-  <head>
-    <title>Capital Whoosh</title>
-    <link rel="stylesheet" type="text/css" href="capitalwhoosh.css">
-  </head>
-  <body>
-		<img src="CapitalWhooshLogoJPEG.JPG" alt="logo" style="width:435px;height:130px;margin-top:25px"/>
-		<p><i style="font-size:35px;font-family: arial,helvetica;">FOREX</i></p>
+	<body>
+		<!-- NEWS -->
 		<div>
-			<p style="font-size:25px;color:white;margin-top:65px">Welcome to <i style="font-size:25px;">Capital Whoosh</i>, your all-in-one college finance manager!</p>
-			<div class="items-in-a-row">
-				<div class="blue-rectangle">
-					<center>hello my name is weenie hut juniors: Having trouble sorting money? We've got you covered! Capital Whoosh offers an efficient system where students
-						can organize their campus finances and create budget meetings</center>
-				</div>
-				<div class="blue-rectangle">
-					<center>SECURE: With our user authentication system, customers can safely login to our portal where they can manage their finances,
-						transactions, and update profile credentials</center>
-				</div>
-				<div class="blue-rectangle">
-					<center>EASY-TO-USE: Our dynamic user interface provides for efficient user navigation and adaptability on different devices</center>
+			<link rel="stylesheet" href="newsTicker.css"/>
+			<div class="news-wrapper">
+				<h3>NEWS</h3>
+				<div class="news"> 
+					<div><span>Bitcoin surges as Elon announces new Tesla model!</span></div>
+					<div><span>news 2</span></div>
+					<div><span>put api or something in here</span></div>
 				</div>
 			</div>
 		</div>
-		<div class="items-in-a-row" style="margin-top:100px;margin-bottom:100px;background-image:none;background-color:#ffffff;">
-			<img src="gandhi1.jpg" alt="gandhi" style="width:300px;height:275px" />
-			<p style="margin-left:75px;font-size:35px"><p>
-		</div>
-		<div class="second-background">
-			<p style="font-size:25px;color:white;margin-top:65px">Take care of business on campus</p>
-			<div class="items-in-a-row-green">
-				<div class="orange-rectangle">
-					<center>Exchange Comet Cash with Friends</center>
-				</div>
-				<div class="orange-rectangle">
-					<center>Manage Student Finances</center>
-				</div>
+		<!-- end of NEWS -->
+
+		<!-- beginning of FOREX -->
+		<link rel="stylesheet" href="style.css"/>
+		<marquee direction="right">
+			<div class="marquee-elements">
+				<p class="marquee-element">USD/JPY</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
 			</div>
-		</div>
-	  <div class="bottom-credits" style="height:35px;">(c)  HackUTD 2021 - Akatsuki Programming Squad. All rights reserved.</div>
-  </body>
+		</marquee>
+		<div class="marquee-title"><i>FOREIGN CURRENCY EXCHANGE</i></div>
+		<!-- > end of FOREX -->
+
+		<!-- beginning of CRYPTO -->
+		<marquee direction="right">
+			<div class="marquee-elements">
+				<p class="marquee-element">USD/JPY</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD/CAD</p>
+			</div>
+		</marquee>
+		<div class="marquee-title"><i>CRYPTOCURRENCY</i></div>
+		<!-- > end of CRYPTO -->
+  	</body>
 </html>
