--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 				<h3>NEWS</h3>
 				<div class="news"> 
 					<div><span>Bitcoin surges as Elon announces new Tesla model!</span></div>
-					<div><span>news 2</span></div>
-					<div><span>put api or something in here</span></div>
+					<div><span>5 takeaways from the COP climate summit investors need to know</span></div>
+					<div><span>Dutch Authorities Seize Cryptocurrency Worth Over 25 Million Euros</span></div>
+					<div><span>Bitcoin’s Biggest Upgrade Since 2017: Taproot Just Went Live</span></div>
+					<div><span>Egyptian Billionaire Remains Bullish on Gold, Says It’s Wrong to Compare Precious Metal to Bitcoin</span></div>
+					<div><span>Goldman Sachs: Gold Is Becoming Poor Man’s Crypto</span></div>
 				</div>
 			</div>
 		</div>
@@ -35,33 +38,40 @@
 		<link rel="stylesheet" href="style.css"/>
 		<marquee direction="right">
 			<div class="marquee-elements">
-				<p class="marquee-element">USD/JPY</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">USD TO JPY<br><span style="color: red;">&#8595 113.9295</span></p>
+				<p class="marquee-element">USD TO CAD<br><span style="color: green;">&#8593 1.25508</span></p>
+				<p class="marquee-element">USD TO EUR<br><span style="color: red;">&#8595 0.87389</span></p>
+				<p class="marquee-element">USD TO INR<br><span style="color: red;">&#8595 74.34504</span></p>
+				<p class="marquee-element">USD TO NGN<br><span style="color: green;">&#8593 410.5803</span></p>
+				<p class="marquee-element">USD TO MXN<br><span style="color: red;">&#8595 20.520504</span></p>
+				<p class="marquee-element">USD TO KRW<br><span style="color: green;">&#8593 1 179.945</span></p>
+				<p class="marquee-element">USD TO RUB<br><span style="color: green;">&#8593 72.899504</span></p>
 			</div>
 		</marquee>
 		<div class="marquee-title"><i>FOREIGN CURRENCY EXCHANGE</i></div>
+		
 		<!-- > end of FOREX -->
 
 		<!-- beginning of CRYPTO -->
 		<marquee direction="right">
 			<div class="marquee-elements">
-				<p class="marquee-element">USD/JPY</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
-				<p class="marquee-element">USD/CAD</p>
+				<p class="marquee-element">BTC<br><span style="color: red;">&#8595 $63 881.00</span></p>
+				<p class="marquee-element">ETH<br><span style="color: red;">&#8595 $4 549.29</span></p>
+				<p class="marquee-element">DOGE<br><span style="color: green;">&#8593 $0.261</span></p>
+				<p class="marquee-element">LTC<br><span style="color: red;">&#8595 $253.64</span></p>
+				<p class="marquee-element">BCH<br><span style="color: red;">&#8595 $659.79</span></p>
+				<p class="marquee-element">SOL<br><span style="color: red;">&#8595 231.93</span></p>
+				<p class="marquee-element">ADA<br><span style="color: red;">&#8595 $2.02</span></p>
+				<p class="marquee-element">DOT<br><span style="color: red;">&#8595 $45.32</span></p>
 			</div>
 		</marquee>
 		<div class="marquee-title"><i>CRYPTOCURRENCY</i></div>
+		
+		
 		<!-- > end of CRYPTO -->
+
+		<div class="marquee-title" style="margin:100px;">
+			Current Portfolio Value: <span style="color: blue;">$0.00</span>
+		</div>
   	</body>
 </html>
