--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<!-- > end of CRYPTO -->
 
 		<div class="marquee-title" style="margin:100px;">
-			Current Portfolio Value: <span style="color: blue;">$0.00</span>
+			Current Portfolio Value: <span style="color: blue;">$0.00 USD</span>
 		</div>
   	</body>
 </html>
